I have changed the address, phone number and some of the text used on the page and I am currently editing the FAQ.

--- a/data-hub-and-sms-site.html
+++ b/data-hub-and-sms-site.html
@@ -45,7 +45,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -155,7 +155,7 @@
                             As Nigeria's #1 reliable and trusted bulk SMS and data service provider, we serve a wide array of clients cutting across different sectors. 
                             We help subscribe all kinds data bundles for any network for cheaper. We now have direct connections with all GSM operators in Nigeria, as well as Hosted SIMs that deliver to Do-Not-Disturb (DND) numbers. 
                             In addition to that, our user interface is inviting and friendly. You don’t need to be an IT guru to use our platform. 
-                            There are many ways to contact us for our data and sms services to make a request: By e-mail, by phone <strong>(613-562-5900 or 613-562-4616)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
+                            There are many ways to contact us for our data and sms services to make a request: By e-mail, by phone <strong>(+2348030947468 or +2348030947468)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
                         </p>
                         <table class="table table-striped table-bordered">
                             <thead>
@@ -209,7 +209,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-dashboard mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-it-consulting.html">IT Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-consulting.html">IT Consulting</a></h4>
                                     </div>
                                 </div>
                             </div>
