--- a/device-repairs.html
+++ b/device-repairs.html
@@ -45,7 +45,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                         <p>
-                            We repair any kind of phone/laptop/desktop problems ranging from screen related damages to motherboard related issues, which result due to age and other factors such as accidental drops. We also assist in device and software updates for all kinds of devices. When your smartphone or laptop is compromised as a result of any of the aforementioned incidents, do not fret. Contact Aftatech.IT and specify your problem. There are many ways to contact our experienced team for repairs: By e-mail, by phone <strong>(613-562-5900 or 613-562-4616)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
+                            We repair any kind of phone/laptop/desktop problems ranging from screen related damages to motherboard related issues, which result due to age and other factors such as accidental drops. We also assist in device and software updates for all kinds of devices. When your smartphone or laptop is compromised as a result of any of the aforementioned incidents, do not fret. Contact Aftatech.IT and specify your problem. There are many ways to contact our experienced team for repairs: By e-mail, by phone <strong>(+2348030947468 or +2348030947468)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
                         </p>
                         <div class="services-more">
                             <h2>Popular Services</h2>
@@ -160,7 +160,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-laptop mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-it-consulting.html">IT <br>Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-consulting.html">IT <br>Consulting</a></h4>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4">
