--- a/gadgets-sales.html
+++ b/gadgets-sales.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Aftatech.IT - It Solutions Company">
 
     <!-- ========== Page Title ========== -->
     <title>Our Multimedia Rentals</title>
@@ -45,7 +45,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -160,7 +160,7 @@
                             </div>
                         </div>
                         <p>
-                            We are the most trusted phone/laptop vendor in Ilorin, Nigeria. With our vast experience, we have grown to become one of the best vendors for any type of technological device or accessory. Our customer testimonials tell a story of trust, honesty and premium quality. There are many ways to touch base with our tech specialists to make a request: By e-mail, by phone <strong>(613-562-5900 or 613-562-4616)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
+                            We are the most trusted phone/laptop vendor in Ilorin, Nigeria. With our vast experience, we have grown to become one of the best vendors for any type of technological device or accessory. Our customer testimonials tell a story of trust, honesty and premium quality. There are many ways to touch base with our tech specialists to make a request: By e-mail, by phone <strong>(+2348030947468 or +2348030947468)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
                         </p>
                         <div class="service-images">
                             <style>
@@ -257,7 +257,7 @@
                             <div class="content">
                                 <ul>
                                     <li class="current-item"><a href="#">Mutimedia Rentals</a></li>
-                                    <li><a href="it-it-consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-consulting.html">IT Consulting</a></li>
                                     <li><a href="data-hub-and-sms-site.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="software-development.html">Software Development</a></li>
