--- a/header.html
+++ b/header.html
@@ -59,7 +59,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="multimedia-rentals.html">Multimedia Rentals</a></li>
                                     <li><a href="gadgets-sales.html">Sale of Gadgets</a></li>
-                                    <li><a href="it-it-consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-consulting.html">IT Consulting</a></li>
                                     <li><a href="data-hub-and-sms-site.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="software-development.html">Software Development</a></li>
