--- a/it-consulting.html
+++ b/it-consulting.html
@@ -45,7 +45,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -123,7 +123,7 @@
                         </div>
                         <h2>Professional IT Consulting and Advisory</h2>
                         <p>
-                            We also specialize in advising organizations on how best to use information technology (IT) in achieving their business objectives. We will make sure to support and nurture your business projects from the very beginning of each project until the end, and deliver the project not only in the scope, time and cost but also with complete customer satisfaction.
+                            We aid various organizations that may need aftatechnologies to help in getting certain task right in the I.T. world. We also specialize in advising organizations on how best to use information technology (IT) in achieving their business objectives. We will make sure to support and nurture your business projects from the very beginning of each project until the end, and deliver the project not only in the scope, time and cost but also with complete customer satisfaction.
                         </p>
                         <div class="features">
                             <div class="row">
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                         <p>
-                            Our IT Consultancy includes advisory services that help clients assess different technology strategies and, in doing so, align their technology strategies with their business or process strategies. We work with clients to help them transform the way they use technology. Traditionally, these transformations gears your business towards improving business processes, reducing costs, maximising use of tech opportunities, and more. There are many ways to touch base with our consulting specialists to make a request: By e-mail, by phone <strong>(613-562-5900 or 613-562-4616)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
+                            Our IT Consultancy includes advisory services that help clients assess different technology strategies and, in doing so, align their technology strategies with their business or process strategies. We work with clients to help them transform the way they use technology. Traditionally, these transformations gears your business towards improving business processes, reducing costs, maximising use of tech opportunities, and more. There are many ways to touch base with our consulting specialists to make a request: By e-mail, by phone <strong>(+2348030947468 or +2348030947468)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
                         </p>
                         <p>
                             Our consultancy services support customers’ IT initiatives by providing strategic, architectural, operational and implementation planning. Strategic planning includes advisory services that help clients assess their IT needs and formulate system implementation plans. Architecture planning includes advisory services that combine strategic plans and knowledge of emerging technologies to create the logical design of the system and the supporting infrastructure to meet customer requirements. Operational assessment/benchmarking include services that assess the operating efficiency and capacity of a client’s IT environment. Implementation planning includes services aimed at advising customers on the rollout and testing of new solution deployments.
@@ -175,7 +175,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-dashboard mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-it-consulting.html">IT Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-consulting.html">IT Consulting</a></h4>
                                     </div>
                                 </div>
                             </div>
