--- a/multimedia-rentals.html
+++ b/multimedia-rentals.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Aftatech.IT - It Solutions Company">
 
     <!-- ========== Page Title ========== -->
     <title>Our Multimedia Rentals</title>
@@ -45,7 +45,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <p>
-                            We are an audio|visual|media service provider. With our vast experience, we have grown to become one of the best service providers for all your visual needs, audio setups and media related services. Aftatech.IT will continue to strive to remain unrivaled in an ever competitive industry. There are many ways to touch base with our tech specialists to make a request: By e-mail, by phone <strong>(613-562-5900 or 613-562-4616)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
+                            We are an audio|visual|media service provider. With our vast experience, we have grown to become one of the best service providers for all your visual needs, audio setups and media related services. Aftatech.IT will continue to strive to remain unrivaled in an ever competitive industry. There are many ways to touch base with our tech specialists to make a request: By e-mail, by phone <strong>(+2348030947468 or +2348030947468)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
                         </p>
                         <p>
                             We can accommodate all of your multimedia rental needs. Equiments are available for hire for your personal and corporate events. All equipments in our rental line ups are professional models from branded products like Vivitek, Acer etc. You can rent an equipment for a simple requirement like presentation display and for a special event like wedding pre shoot display. We provide equimpments at affordable rental rates for large business events and small presentations. Our equipments are equipped with all necessary connecting cables and carrying bag.
@@ -237,7 +237,7 @@
                             <div class="content">
                                 <ul>
                                     <li class="current-item"><a href="#">Mutimedia Rentals</a></li>
-                                    <li><a href="it-it-consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-consulting.html">IT Consulting</a></li>
                                     <li><a href="data-hub-and-sms-site.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="software-development.html">Software Development</a></li>
