--- a/software-development.html
+++ b/software-development.html
@@ -45,7 +45,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -153,7 +153,7 @@
                         </div>
                         <p>
                             Our software development services can help provide Big Data Solutions, cloud-based app development, web and mobile development. When approaching custom software solutions, it’s important to choose a software development agency, like us, that has the processes, tools, experience, and internal culture to make each of your projects a success. At Aftatech.IT, we value your business and are committed to helping you make the best possible decisions.
-                            Whatever your idea, we’ll work with you to build an amazing product through web and mobile application development, full consulting services, project management, data management, and more. There are many ways to touch base with our experienced developers to make a request: By e-mail, by phone <strong>(613-562-5900 or 613-562-4616)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
+                            Whatever your idea, we’ll work with you to build an amazing product through web and mobile application development, full consulting services, project management, data management, and more. There are many ways to touch base with our experienced developers to make a request: By e-mail, by phone <strong>(+2348030947468 or +2348030947468)</strong> or come see us in person at <strong>2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State</strong>.
                         </p>
                         <div class="services-more">
                             <h2>Popular Services</h2>
@@ -173,7 +173,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-dashboard mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-it-consulting.html">IT Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-consulting.html">IT Consulting</a></h4>
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                             <div class="content">
                                 <ul>
                                     <li class="current-item"><a href="#">Software Development</a></li>
-                                    <li><a href="it-it-consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-consulting.html">IT Consulting</a></li>
                                     <li><a href="data-hub-and-sms-site.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="gadgets-sales.html">Sales of Gadgets</a></li>
