--- a/aftatech-solutions.html
+++ b/aftatech-solutions.html
@@ -53,7 +53,7 @@
                 <div class="col-xl-7 offset-xl-2 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -438,7 +438,7 @@
                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
                                     <p>
-                                        Jennings appetite disposed me an at subjects an. To no indulgence diminution so discovered mr apartments. Are off under folly death wrote cause her way spite. Plan upon yet way get cold spot its week. Almost do am or limits hearts. Resolve parties but why she shewing. She sang know now minute exact dear open to reaching out.
+                                        We have a variety of data plans for every Nigerian Telecommunication Company. We sell daily, weekly, monthly, yearly and special plans for MTN, Glo, Airtel and Etisalat at cheaper rates than you will find anywhere. You can check out some of our plans on <a href="https://aftatechsub.com.ng/">aftatechsub.com.ng</a>.
                                     </p>
                                 </div>
                            </div>
@@ -452,7 +452,7 @@
                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
                                     <p>
-                                        Jennings appetite disposed me an at subjects an. To no indulgence diminution so discovered mr apartments. Are off under folly death wrote cause her way spite. Plan upon yet way get cold spot its week. Almost do am or limits hearts. Resolve parties but why she shewing. She sang know now minute exact dear open to reaching out.
+                                        We repair all phones and laptops and also teach those willing to learn. We have a proven track record of graduated trainees who have gone ahead to make waves in the engineering field. Aftatech Institute is renowned in Ilorin for its strict and inclusive curriculum that alows students to make the most of their time learning in the institute.
                                     </p>
                                 </div>
                            </div>
