--- a/contact-us.html
+++ b/contact-us.html
@@ -8,10 +8,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Aftatech - It Solutions Company">
 
     <!-- ========== Page Title ========== -->
-    <title>Crysa - It Solution Template</title>
+    <title>Aftatech.IT - It Solutions Company</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -49,7 +49,7 @@
                 <div class="col-xl-7 offset-xl-2 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
@@ -127,7 +127,7 @@
                             <p>
                                 Our hotline is available from 9am to 5pm and we answer all enquiries.
                             </p>
-                            <a href="#">+4733378901</a>
+                            <a href="tel:+2348030947468">+2348030947468</a>
                         </div>
                     </div>
                     <!-- End Single Item -->
@@ -137,7 +137,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <h4 class="title">Our Location</h4>
                             <p>
-                                44 Adenike Street, Ibeju Estate, Crocodile Island, Lagos State
+                                2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State
                             </p>
                             <a class="smooth-menu" href="#contact">Check Location</a>
                         </div>
