--- a/services-details.html
+++ b/services-details.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Aftatech.IT - It Solutions Company">
 
     <!-- ========== Page Title ========== -->
     <title>Aftatech-service</title>
@@ -52,7 +52,7 @@
                 <div class="col-xl-8 col-lg-8 info">
                     <ul>
                         <li>
-                            Need Help? <a href="tel:+4733378901">Request A Callback</a>
+                            Need Help? <a href="tel:+2348030947468">Request A Callback</a>
                         </li>
                         <li>
                             <i class="fal fa-clock"></i> <span>Working Hours: 9:00 AM – 9:00 PM</span>
