I have completed the javascript and structure for the grid gallery.

--- a/aftatech-solutions.html
+++ b/aftatech-solutions.html
@@ -315,16 +315,16 @@
                                         <div class="item">
                                             <div class="provider">
                                                 <div class="thumb">
-                                                    <img src="assets/img/teams/5.jpg" alt="Thumb">
+                                                    <img src="assets/gallery/IMG-20220810-WA0032.jpg" alt="Thumb">
                                                 </div>
                                                 <div class="info">
-                                                    <h4>Matthew J. Wyman</h4>
-                                                    <span>Senior Consultant</span>
+                                                    <h4>Matthew Bamidele</h4>
+                                                    <span>Founder & CEO</span>
                                                 </div>
                                             </div>
                                             <div class="content">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis vel enim a aliquam. Vestibulum porttitor risus eu massa vulputate, sed ultrices diam tempus. Vivamus semper elit a faucibus sollicitudin. Nunc convallis magna quis augue lacinia, efficitur.
+                                                    I founded Aftatech to equip the youths of the next generation with knowledge for them to thrive in the ever-evolving field of software development and hardware engineering. Since 2007, we have helped a lot of hopeless youth gain skills that have changed their lives.
                                                 </p>
                                             </div>
                                         </div>
@@ -340,16 +340,16 @@
                                         <div class="item">
                                             <div class="provider">
                                                 <div class="thumb">
-                                                    <img src="assets/img/teams/6.jpg" alt="Thumb">
+                                                    <img src="assets/gallery/IMG-20220810-WA0046.jpg" alt="Thumb">
                                                 </div>
                                                 <div class="info">
-                                                    <h4>Anthom Bu Spar</h4>
+                                                    <h4>Johnson Emeka</h4>
                                                     <span>Marketing Manager</span>
                                                 </div>
                                             </div>
                                             <div class="content">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis vel enim a aliquam. Vestibulum porttitor risus eu massa vulputate, sed ultrices diam tempus. Vivamus semper elit a faucibus sollicitudin. Nunc convallis magna quis augue lacinia, efficitur.
+                                                    Aftatech.IT is undoubtedly the most qualified technology company I've worked with  in Nigeria. Our IT Consulting services has helped numerous startups and established companies to take their business to the next level technology-wise.
                                                 </p>
                                             </div>
                                         </div>
@@ -365,16 +365,16 @@
                                         <div class="item">
                                             <div class="provider">
                                                 <div class="thumb">
-                                                    <img src="assets/img/teams/5.jpg" alt="Thumb">
+                                                    <img src="assets/gallery/IMG-20220810-WA0048.jpg" alt="Thumb">
                                                 </div>
                                                 <div class="info">
-                                                    <h4>Metho k. Partho</h4>
+                                                    <h4>Chukwuka James</h4>
                                                     <span>Senior Developer</span>
                                                 </div>
                                             </div>
                                             <div class="content">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis vel enim a aliquam. Vestibulum porttitor risus eu massa vulputate, sed ultrices diam tempus. Vivamus semper elit a faucibus sollicitudin. Nunc convallis magna quis augue lacinia, efficitur.
+                                                    Our developer team is comprised of the most professional, world-class developers in a conducive work environment who oversee the creation and maintenance of client-entrusted projects. We optimize resources and time to deliver what the client deserves - the absolute best.
                                                 </p>
                                             </div>
                                         </div>
