--- a/contact-us.html
+++ b/contact-us.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Aftatech - It Solutions Company">
 
     <!-- ========== Page Title ========== -->
-    <title>Aftatech.IT - It Solutions Company</title>
+    <title>Aftatech - IT Solutions Company</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
