--- a/index.html
+++ b/index.html
@@ -655,9 +655,9 @@
                             </div>
                         </div>
                         <div class="content ms-lg-5">
-                            <h4>Customer satisfaction</h4>
+                            <h4>Customer Satisfaction</h4>
                             <p>
-                                Pointure horrible margaret suitable he followed speedily. Indeed vanity excuse or mr lovers of on. By offer scale an stuff. Blush be sorry no sight sang lose ecstatic and properly.
+                                We have a lengthy track record of highly satisfied clientele and students from all over the country that prove that we deliver only the best to all our clients with exceptional graduates from our institute.
                             </p>
                         </div>
                     </div>
