--- a/multimedia-rentals.html
+++ b/multimedia-rentals.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Aftatech.IT - It Solutions Company">
+    <meta name="description" content="Aftatech - IT Solutions Company">
 
     <!-- ========== Page Title ========== -->
     <title>Our Multimedia Rentals</title>
